# has-my-alias-been-pwned

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: main.yml  rust.yml  semgrep.yml
resources/test/: anonaddy_active_alias.json  anonaddy_aliases.json  anonaddy_inactive_alias.json  hibp_breaches.json
src/: anonaddy.rs  email_alias.rs  hibp.rs  main.rs
