[package]
name = "has-my-alias-been-pwned"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "A simple application to check email aliases against haveibeenpwned.com"
repository = "https://github.com/gigaSproule/has-my-alias-been-pwned"

[dependencies]
async-trait = "0.1.80"
dotenv = "0.15.0"
log = "0.4.21"
log4rs = "1.3.0"
reqwest = { version = "0.12.4", features = [ "json" ] }
serde = { version = "1.0.198", features = [ "derive" ] }
tokio = { version = "1.37.0", features = [ "full" ] }

[dev-dependencies]
httpmock = "0.7"
serial_test = "3.0.0"
